--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "walk": "^2.3.9"
   },
   "dependencies": {
+    "concat-stream": "^1.6.0",
     "cuid": "^1.3.8",
     "debug": "^3.0.1",
     "fuse-bindings": "^2.9.0",
