--- a/package.json
+++ b/package.json
@@ -27,6 +27,9 @@
   "homepage": "https://github.com/andrewosh/layerdrive-fs#readme",
   "devDependencies": {
     "dependency-check": "^2.6.0",
+    "hyperdrive": "^9.5.1",
+    "random-access-memory": "^2.4.0",
+    "rimraf": "^2.6.1",
     "standard": "^7.1.2",
     "tape": "^4.6.0",
     "through2": "^2.0.1",
@@ -37,6 +40,7 @@
     "cuid": "^1.3.8",
     "debug": "^3.0.1",
     "fuse-bindings": "^2.9.0",
+    "minimist": "^1.2.0",
     "mkdirp": "^0.5.1",
     "mknod": "^1.1.0",
     "pump": "^1.0.1",
